updated contrast issue from week 4 feedback.

--- a/lesson4/css/small.css
+++ b/lesson4/css/small.css
@@ -1,6 +1,6 @@
 main {
   display: grid;
-  align-items: center; 
+  align-items: center;
   margin: 0px 5px 0px 5px;
 }
 
@@ -9,7 +9,7 @@ footer {
   background-color: #5D8BA3;
 }
 
-header{
+header {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -100,8 +100,7 @@ a {
 
 .nav a:hover {
   background-color: #5D8BA3;
-  color: #FFCE8B
-  ;
+  color: #FFCE8B;
 }
 
 .responsive li {
@@ -115,9 +114,9 @@ img {
 }
 
 /*Section (placeholders) rules*/
-.placeHolder{
+.placeHolder {
   width: 100%;
-  height:30px;
+  height: 30px;
   background-color: grey;
   border-radius: 5px;
   margin: 10px 0px 10px 0px;
