--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -1,6 +1,6 @@
 main {
   display: grid;
-  align-items: center; 
+  align-items: center;
   margin: 0px 5px 0px 5px;
 }
 
@@ -9,7 +9,7 @@ footer {
   background-color: #5D8BA3;
 }
 
-header{
+header {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -73,7 +73,7 @@ p {
 
 /*Nav rules */
 nav {
-  background-color: #A07131;
+  background-color: #FFCE8B;
   text-align: center;
   margin: 0 auto;
   font-size: 18px;
@@ -109,8 +109,8 @@ a {
 }
 
 .nav a:hover {
-  background-color: #051E2B;
-  color: #A07131;
+  background-color: #5D8BA3;
+  color: #FFCE8B;
 }
 
 .navactive {
@@ -138,7 +138,7 @@ img {
   position: relative;
 }
 
-.currentSummary{
+.currentSummary {
   position: absolute;
   top: 1rem;
   background-color: seagreen;
